update pytest running

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,5 +41,5 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          uv run coverage run -m pytest
+          uv run coverage run -m pytest -s
           uv run coverage report
