--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,27 @@ maintainers = [
   {name = "Soldatov Serhii", email = "soldatov.own@gmail.com"}
 ]
 classifiers = [
-    # TODO
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Intended Audience :: System Administrators",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: System :: Filesystems",
+    "Topic :: Utilities",
+    "Typing :: Typed",
 ]
 license = {text = "MIT"}
 dependencies = [
   "typer"
 ]
-requires-python = ">= 3.10"
+requires-python = ">= 3.9"
+keywords = ["cli", "files", "cleanup", "utility", "thanos"]
 
 [project.optional-dependencies]
 test = [
@@ -28,9 +42,10 @@ test = [
 ]
 
 [project.urls]
+homepage = "https://github.com/soldatov-ss/thanos"
 bugs = "https://github.com/soldatov-ss/thanos/issues"
 changelog = "https://github.com/soldatov-ss/thanos/blob/master/changelog.md"
-homepage = "https://github.com/soldatov-ss/thanos"
+documentation = "https://github.com/soldatov-ss/thanos/blob/master/docs/usage.md"
 
 [project.scripts]
 thanos = "thanos.cli:app"
