--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ classifiers = [
 license = { text = "MIT" }
 dependencies = [
     "pathspec>=0.12.1",
+    "send2trash>=1.8.3",
     "typer",
 ]
 requires-python = ">= 3.9"
